@@ -107,6 +107,9 @@ Next version (4.05.0):
 - PR#7414/GPR#929: Soundness bug with non-generalized type variable and functors
   (Jacques Garrigue, report by Leo White)
 
+- PR#7421: Soundness bug with GADTs and lazy
+  (Jacques Garrigue, report by Leo White)
+
 - GPR#795: remove 256-character limitation on Sys.executable_name
   (Xavier Leroy)
 
